2005-10-29  Hans-Peter Nilsson  <hp@axis.com>

	PR gas/1630
	* gas/all/gas.exp <weakref1, weakref1g, weakref1l, weakref1u,
	weakref1w>: Xfail for cris-*-* and mmix-*-*.

2005-10-27  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/equ.d: Fix typo.
	* gas/i386/equ.s: Don't globalize r.

2005-10-27  Jan Beulich  <jbeulich@novell.com>

	* gas/all/gas.exp: Don't xfail equiv1 test anymore.

2005-10-26  Paul Brook  <paul@codesourcery.com>

	* gas/arm/archv6.d: Adjust expected output.

2005-10-26  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intel.s: Replace register used in offset expression.
	* gas/i386/intel.e: Adjust.
	* gas/i386/intelbad.l: Adjust.
	* gas/i386/equ.[sed]: New.
	* gas/i386/i386.exp: Run new test.

2005-10-26  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/z80/z80.exp: Fix misplaced-open-brace typo.

2005-10-25  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* gas/all/gas.exp: Exclude Z80-*-* from floating point, string,
	and cofftag test.
	* gas/macros/macros.exp: Expect z80-*-* to fail the strings test
	because it has no string escapes.
	* gas/z80/quotes.d: New file
	* gas/z80/quotes.d: New file
	* gas/z80/quotes.s: New file
	* gas/z80/redef.d: New file
	* gas/z80/redef.s: New file
	* gas/z80/z80.exp: New file
	
2005-10-24  Bernd Schmidt  <bernd.schmidt@analog.com>

	* gas/bfin/flow2.d: Match changed assembler behaviour.
	* gas/bfin/reloc.d: Likewise.

2005-10-24  Alexandre Oliva  <aoliva@redhat.com>

	* gas/all/weakref1.s, gas/all/weakref1.d: New test.
	* gas/all/weakref1g.d, gas/all/weakref1l.d: New tests.
	* gas/all/weakref1u.d, gas/all/weakref1w.d: New tests.
	* gas/all/weakref2.s, gas/all/weakref3.s: New tests.
	* gas/all/gas.exp: Run new tests.

2005-10-24  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/index.[sl]: New.
	* gas/ia64/rotX.[sl]: New.
	* gas/ia64/ia64.exp: Run new tests.

2005-10-24  Jan Beulich  <jbeulich@novell.com>

	* gas/ia64/regs.pl: Also check tp alias of r13.
	* gas/ia64/regs.s: Regenerate.
	* gas/ia64/regs.d: Adjust.
